--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.6",
+    "axios": "^0.19.0",
+    "highcharts": "^7.2.0",
+    "highcharts-react-official": "^2.2.2",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "xml2js": "^0.4.22"
   },
   "scripts": {
     "start": "react-scripts start",
